--- a/Docs/排序问题.md
+++ b/Docs/排序问题.md
@@ -22,3 +22,18 @@
 		}
 	}
 ```
+
+## PopSort
+```C++
+	void popSort(std::vector<int>& nums) {
+		int curRight = nums.size() - 1;
+		while (curRight >= 1)
+		{
+			for (int i = 0; i < curRight; i++)
+			{
+				if (nums[i] > nums[i + 1])std::swap(nums[i], nums[i + 1]);
+			}
+			curRight--;
+		}
+	}
+```
